提交游戏设定V1.0

--- a/sgoc_server/myadmin/readme
+++ b/sgoc_server/myadmin/readme
@@ -1,11 +1,113 @@
-系统管理模块
-1.账号注册
-2.登录登出
-3.业务菜单管理
-4.角色管理
-5.组group管理
+#模块划分
+-
+--sgoc_server 业务主模块
+--myadmin  系统管理模块
 
-6角色配置菜单
-7.
-8.用户配置角色
-9.用户配置组
+
+#设定
+大境界：1.灵境， 2.仙境，3.至尊境
+小境界：
+灵境：炼气，筑基，金丹，元婴。
+仙境：地仙，灵仙，上仙，天仙，金仙。  丹田化为道界
+至尊境：按道界来衡量。   道界升级为独立的宇宙。
+
+道主的境界 决定门人的境界，门人境界不能高过道主，
+
+修炼体系
+法力条：
+灵境：灵力 -》 法力
+仙境：天地元力 -》仙力
+至尊境：混沌宇宙之力 -》神力
+
+流通货币
+1.硬通货：灵石，灵元石，混沌石
+天地凡三品为1比100的兑换
+神品为特殊
+灵石：灵境用
+元石：仙境用
+混沌石：至尊用
+
+
+仙境：道界精华石，提升道界等级用
+至尊境：道种（开辟新的道界用）
+
+品质：
+天地凡三品和凌驾天品之上的神品。
+
+
+辅助系统
+1.丹药：
+
+2.炼器：
+
+3.道阵：
+
+战斗系统
+灵兽系统
+可以和灵兽缔结契约，仅限于灵兽。
+
+仙境以上开启道界后，可以招收门人
+门人系统，一切具有神魂，可修炼的物种都可以作为门人
+
+
+所有灵兽，门人，道具都均有神天地凡四种品质
+
+成长性：
+法宝，灵兽，门人的品质不同，成长性不同。
+
+灵兽，门人的成长性：
+灵根： 影响法力存储上限，法力恢复速度，和晋级成功率。
+灵脉： 影响体魄强度，法力输出功率，生命力，生命恢复速度，防御。
+灵智： 影响神智和神识，法术攻击强度。
+
+成长性体现在，每升一级 增加的点数不同，每提升一个大境界，额外增加的基础属性不同
+
+属性：
+攻击力  有上限和下限区间
+生命力
+防御力  攻击力<防御力时，伤害为1
+
+法力，用于释放普通法术。
+精元，用于释放神通。
+
+速度  决定攻击速度和闪避率
+神识  决定命中率和暴击率
+神念  决定装备的法宝数量
+
+法术修炼
+提高境界
+提高五行攻击
+
+肉身修炼
+提高生命上限，生命回复
+五行防御
+
+
+
+天赋神通（先天神通）：
+
+法术和神通
+神通又分为小神通，神通和大神通。
+
+释放法术需要法力
+释放神通需要消耗精元
+
+
+卡片分为灵兽卡，门人卡，和法术卡，神通卡
+灵兽卡可以升级为门人卡
+法术卡可以升级为神通卡
+
+
+五行属性
+相克，金木水火土，  相克体现在伤害计算上，伤害提升100% 或者降低50%
+相生，金水土木火，  相生体现在合击计算上，合击技能伤害提升100%
+
+特异属性
+风雷，光暗 四种属性 无视其他五行抗性
+
+混沌属性，对所有属性增伤100%， 受到伤害也是增加100%
+
+
+#数据库设计
+用户表（覆盖django原生user）
+角色表
