提交游戏设定V1.0

--- a/sgoc_server/myadmin/readme
+++ b/sgoc_server/myadmin/readme
@@ -106,8 +106,20 @@
 风雷，光暗 四种属性 无视其他五行抗性
 
 混沌属性，对所有属性增伤100%， 受到伤害也是增加100%
+####################################################
+属性设定
+一.灵兽，门人，傀儡
+
+二.法宝
 
 
+####################################################
+
+
+####################################################
+
+
+####################################################
 #数据库设计
 用户表（覆盖django原生user）
 角色表
